Refactor session management: add observation field, update scheduling methods, and enhance availability response